--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 hidden>Важные акценты</h2>
         <ul>
           <li>
-            <img src="/goit-markup-hw-01/images/Vector.svg" alt="спутник" />
+            <img src="/images/Vector.svg" alt="спутник" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -56,7 +56,7 @@
             </p>
           </li>
           <li>
-            <img src="/goit-markup-hw-01/images/time.svg" alt="время" />
+            <img src="/images/time.svg" alt="время" />
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
@@ -64,7 +64,7 @@
             </p>
           </li>
           <li>
-            <img src="/goit-markup-hw-01/images/grafik.svg" alt="график" />
+            <img src="/images/grafik.svg" alt="график" />
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
@@ -72,7 +72,7 @@
             </p>
           </li>
           <li>
-            <img src="/goit-markup-hw-01/images/kosmos.svg" alt="космос" />
+            <img src="/images/kosmos.svg" alt="космос" />
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
@@ -86,20 +86,20 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href="./goit-markup-hw-01/images/img.png"
-              ><img src="/goit-markup-hw-01/images/img.png" alt="ноутбук"
+            <a href="./images/img.png"
+              ><img src="/images/img.png" alt="ноутбук"
             /></a>
             <p>Десктопные приложения</p>
           </li>
           <li>
-            <a href="./goit-markup-hw-01/images/box.png"
-              ><img src="/goit-markup-hw-01/images/box.png" alt="смартфон"
+            <a href="./images/box.png"
+              ><img src="/images/box.png" alt="смартфон"
             /></a>
             <p>Мобильные приложения</p>
           </li>
           <li>
-            <a href="./goit-markup-hw-01/images/dizain.png"
-              ><img src="/goit-markup-hw-01/images/dizain.png" alt="экран"
+            <a href="./images/dizain.png"
+              ><img src="/images/dizain.png" alt="экран"
             /></a>
             <p>Дизайнерские решения</p>
           </li>
@@ -163,32 +163,32 @@
         <ul>
           <li>
             <a href="/"
-              ><img src="/goit-markup-hw-01/images/Client1.svg" alt="клиент1"
+              ><img src="/images/Client1.svg" alt="клиент1"
             /></a>
           </li>
           <li>
             <a href="/"
-              ><img src="/goit-markup-hw-01/images/Client2.svg" alt="клиент2"
+              ><img src="/images/Client2.svg" alt="клиент2"
             /></a>
           </li>
           <li>
             <a href="/"
-              ><img src="/goit-markup-hw-01/images/Client3.svg" alt="клиент3"
+              ><img src="/images/Client3.svg" alt="клиент3"
             /></a>
           </li>
           <li>
             <a href="/"
-              ><img src="/goit-markup-hw-01/images/Client4.svg" alt="клиент4"
+              ><img src="/images/Client4.svg" alt="клиент4"
             /></a>
           </li>
           <li>
             <a href="/"
-              ><img src="/goit-markup-hw-01/images/Client5.svg" alt="клиент5"
+              ><img src="/images/Client5.svg" alt="клиент5"
             /></a>
           </li>
           <li>
             <a href="/"
-              ><img src="/goit-markup-hw-01/images/Client6.svg" alt="клиент6"
+              ><img src="/images/Client6.svg" alt="клиент6"
             /></a>
           </li>
         </ul>
@@ -218,24 +218,24 @@
           <li>
             <a href="" aria-label="иконка инстаграм"
               ><img
-                src="/goit-markup-hw-01/images/instagram.svg"
+                src="/images/instagram.svg"
                 alt="инстаграм"
               />
             </a>
           </li>
           <li>
             <a href="" aria-label="иконка твиттер"
-              ><img src="/goit-markup-hw-01/images/twitter1.svg" alt="твиттер"
+              ><img src="/images/twitter1.svg" alt="твиттер"
             /></a>
           </li>
           <li>
             <a href="" aria-label="иконка фейсбук"
-              ><img src="/goit-markup-hw-01/images/facebook.svg" alt="фейсбук"
+              ><img src="/images/facebook.svg" alt="фейсбук"
             /></a>
           </li>
           <li>
             <a href="" aria-label="иконка ликедин"
-              ><img src="/goit-markup-hw-01/images/linkedin.svg" alt="ликедин"
+              ><img src="/images/linkedin.svg" alt="ликедин"
             /></a>
           </li>
         </ul>
